# Otter

./: .gitignore  RustSync_Roadmap.md  prompt.md
crates/client/: Cargo.toml
crates/client/src/: api.rs  config.rs  error.rs  lib.rs  sync.rs  watcher.rs
crates/core/: Cargo.toml
crates/core/src/: crypto.rs  error.rs  lib.rs  types.rs
crates/server/: Cargo.toml
crates/server/migrations/: 001_init.sql
crates/server/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  security.rs  state.rs  storage.rs  tests.rs
documentation/: CLIENT.md  CORE.md  INDEX.md  SERVER.md
