[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
rustsync_core = { package = "core", path = "../core" }

[dev-dependencies]
axum = "0.7"
server = { path = "../server" }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }
tempfile = "3"
