[package]
name = "core"
version = "0.0.1"
edition = "2024"

[lib]
name = "rustsync_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
thiserror = "1"
